Pass Java parameters to allow env modification